syntax = "proto3";

package raw_product;

service RawProductService {
  rpc GetRawProducts(GetRawProductsRequest) returns (GetRawProductsResponse);
  rpc BatchCreateProducts (BatchCreateProductsRequest) returns (BatchCreateProductsResponse);
  rpc GetCategoryConfig(GetCategoryConfigRequest) returns (GetCategoryConfigResponse);
  rpc GetQueriesForCategory(GetQueriesForCategoryRequest) returns (GetQueriesForCategoryResponse);
}

message GetRawProductsRequest {
  string query = 1;
  string category = 2; // 'videocards', 'processors', 'motherboards'
  string platform_id = 3; // ID платформы (например, '101858153' для Nintendo)
  string exactmodels = 4; // <-- новое поле для фильтрации по модели
  string auth_token = 5; // Токен для аутентификации
}

message RawProduct {
  string id = 1;
  string name = 2;
  int32 price = 3;
  string image_url = 4;
  string product_url = 5;
  string category = 6;
  string source = 7; // 'ozon', 'wb', ...
  string query = 8; // Запрос, по которому найден товар
}

message GetRawProductsResponse {
  repeated RawProduct products = 1;
  int32 total_count = 2;
  string source = 3;
}

message MarketStats {
  string query = 1;
  string category = 2;
  string source = 3;
  int32 min = 4;
  int32 max = 5;
  float mean = 6;
  float median = 7;
  repeated int32 iqr = 8;
  int32 total_count = 9;
  string product_id = 10;
  string created_at = 11;
}

message BatchCreateProductsRequest {
  repeated RawProduct products = 1;
  MarketStats market_stats = 2;
}

message BatchCreateProductsResponse {
  int32 inserted = 1;
}

message GetCategoryConfigRequest {
  string categoryKey = 1;
}

message Category {
  string key = 1;
  string display = 2;
  string ozon_id = 3;
  string wb_id = 4;
}

message GetCategoryConfigResponse {
  Category category = 1;
}

message GetQueriesForCategoryRequest {
  string categoryKey = 1;
}

message QueryConfig {
  string query = 1;
  string platform_id = 2;
  string exactmodels = 3;
  string platform = 4;
}

message GetQueriesForCategoryResponse {
  repeated QueryConfig queries = 1;
} 