import { BaseGrpcClient } from './base-grpc.client';
import { environmentConfig } from '../config/environment.config';

export class OzonApiClient extends BaseGrpcClient<any> {
  constructor(serverAddress: string = 'localhost:3002') {
    super('proto/raw-product.proto', 'RawProductService', serverAddress);
  }

  async filterProducts(request: any): Promise<any> {
    // –î–æ–±–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏
    const authToken = process.env.OZON_API_TOKEN;
    if (!authToken) {
      throw new Error('OZON_API_TOKEN environment variable is not set');
    }
    
    const requestWithAuth = {
      ...request,
      auth_token: authToken
    };
    
    console.log('üì§ –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∑–∞–ø—Ä–æ—Å:', {
      query: requestWithAuth.query,
      category: requestWithAuth.category
    });

    return new Promise((resolve, reject) => {
      const deadline = new Date();
      deadline.setSeconds(deadline.getSeconds() + 30);
      
      console.log('üöÄ –û—Ç–ø—Ä–∞–≤–ª—è–µ–º gRPC –∑–∞–ø—Ä–æ—Å –Ω–∞:', 'localhost:3002');
      
      this.client.GetRawProducts(requestWithAuth, { deadline }, (error: any, response: any) => {
        if (error) {
          console.log('‚ùå gRPC –æ—à–∏–±–∫–∞:', error.message, error.code);
          reject(error);
        } else {
          console.log('‚úÖ gRPC –æ—Ç–≤–µ—Ç –ø–æ–ª—É—á–µ–Ω');
          resolve(response);
        }
      });
    });
  }
} 