import { Injectable } from '@nestjs/common';
import { OzonApiClient } from '../grpc-clients/ozon-api.client';
import { WbApiClient } from '../grpc-clients/wb-api.client';
import { ProductRequestDto } from '../dto/product-request.dto';
import { fileLogger } from '../utils/logger';
import { DbConfigService } from './db-config.service';

@Injectable()
export class ProductAggregatorService {
  constructor(
    private readonly ozonApiClient: OzonApiClient,
    private readonly wbApiClient: WbApiClient,
    private readonly dbConfigService: DbConfigService,
  ) {}

  /**
   * –ê–≥—Ä–µ–≥–∏—Ä—É–µ—Ç —Ç–æ–≤–∞—Ä—ã –∏–∑ WB –∏ Ozon API –ø–æ –∑–∞–ø—Ä–æ—Å—É –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è.
   * @param request - DTO —Å –ø–∞—Ä–∞–º–µ—Ç—Ä–∞–º–∏ –ø–æ–∏—Å–∫–∞
   * @returns Promise —Å –º–∞—Å—Å–∏–≤–æ–º –≤—Å–µ—Ö —Ç–æ–≤–∞—Ä–æ–≤ –∏–∑ –æ–±–æ–∏—Ö –∏—Å—Ç–æ—á–Ω–∏–∫–æ–≤
   */
  async fetchAllProducts(request: ProductRequestDto): Promise<any[]> {
    fileLogger.log(`–ê–≥—Ä–µ–≥–∞—Ü–∏—è —Ç–æ–≤–∞—Ä–æ–≤ –∏–∑ WB –∏ Ozon –¥–ª—è ${request.queries.length} –∑–∞–ø—Ä–æ—Å–æ–≤`);
    
    // –ü–æ–ª—É—á–∞–µ–º –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é –∑–∞–ø—Ä–æ—Å–æ–≤ –∏–∑ –ë–î –æ–¥–∏–Ω —Ä–∞–∑ –¥–ª—è –≤—Å–µ–π –∫–∞—Ç–µ–≥–æ—Ä–∏–∏
    const queryConfigs = await this.dbConfigService.getQueriesForCategory(request.category);
    fileLogger.log(`üìã –ù–∞–π–¥–µ–Ω–æ ${queryConfigs.length} –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–π –∑–∞–ø—Ä–æ—Å–æ–≤ –¥–ª—è –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ ${request.category}`);
    
    // –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –∫–∞–∂–¥—ã–π –∑–∞–ø—Ä–æ—Å –æ—Ç–¥–µ–ª—å–Ω–æ
    const allProducts = [];
    for (const query of request.queries) {
      const singleRequest = {
        ...request,
        queries: [query]
      };
      
      // –ò—â–µ–º –í–°–ï –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏ –¥–ª—è –∫–æ–Ω–∫—Ä–µ—Ç–Ω–æ–≥–æ –∑–∞–ø—Ä–æ—Å–∞
      const queryConfigsForQuery = queryConfigs.filter((q: any) => q.query === query);
      fileLogger.log(`üîç –ó–∞–ø—Ä–æ—Å "${query}": –Ω–∞–π–¥–µ–Ω–æ ${queryConfigsForQuery.length} –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–π`);
      
      const promises = [];
      
      // –û–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –∫–∞–∂–¥—É—é –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é
      for (const queryConfig of queryConfigsForQuery) {
        fileLogger.log(`üìã –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è: –ø–ª–∞—Ç—Ñ–æ—Ä–º–∞ ${queryConfig.platform}`);
        
        if (queryConfig.platform === 'wb') {
          fileLogger.log(`üì± –ü–∞—Ä—Å–∏–Ω–≥ WB –¥–ª—è –∑–∞–ø—Ä–æ—Å–∞: ${query}`);
          promises.push(this.getProductsFromApi(singleRequest, this.wbApiClient, 'wb', queryConfig));
        }
        
        if (queryConfig.platform === 'ozon') {
          fileLogger.log(`üõí –ü–∞—Ä—Å–∏–Ω–≥ Ozon –¥–ª—è –∑–∞–ø—Ä–æ—Å–∞: ${query}`);
          promises.push(this.getProductsFromApi(singleRequest, this.ozonApiClient, 'ozon', queryConfig));
        }
      }
      
      // –ï—Å–ª–∏ –Ω–µ—Ç —Å–ø–µ—Ü–∏—Ñ–∏—á–Ω–æ–π –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏, –ø–∞—Ä—Å–∏–º –æ–±–µ –ø–ª–∞—Ç—Ñ–æ—Ä–º—ã
      if (promises.length === 0) {
        fileLogger.log(`üîÑ –ü–∞—Ä—Å–∏–Ω–≥ –æ–±–µ–∏—Ö –ø–ª–∞—Ç—Ñ–æ—Ä–º –¥–ª—è –∑–∞–ø—Ä–æ—Å–∞: ${query} (–∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –Ω–µ –Ω–∞–π–¥–µ–Ω–∞)`);
        promises.push(
          this.getProductsFromApi(singleRequest, this.wbApiClient, 'wb', null),
          this.getProductsFromApi(singleRequest, this.ozonApiClient, 'ozon', null)
        );
      }
      
      const results = await Promise.all(promises);
      allProducts.push(...results.flat());
    }
    
    // –õ–æ–≥–∏—Ä—É–µ–º –æ–±—â–µ–µ –∫–æ–ª–∏—á–µ—Å—Ç–≤–æ —Ç–æ–≤–∞—Ä–æ–≤
    fileLogger.log(`üìä –í—Å–µ–≥–æ –ø–æ–ª—É—á–µ–Ω–æ: ${allProducts.length} —Ç–æ–≤–∞—Ä–æ–≤`);
    
    return allProducts;
  }

  /**
   * –£–Ω–∏–≤–µ—Ä—Å–∞–ª—å–Ω—ã–π –º–µ—Ç–æ–¥ –ø–æ–ª—É—á–µ–Ω–∏—è —Ç–æ–≤–∞—Ä–æ–≤ –∏–∑ –≤–Ω–µ—à–Ω–µ–≥–æ API.
   * @param request - DTO —Å –ø–∞—Ä–∞–º–µ—Ç—Ä–∞–º–∏ –ø–æ–∏—Å–∫–∞
   * @param client - gRPC-–∫–ª–∏–µ–Ω—Ç (WB –∏–ª–∏ Ozon)
   * @param source - —Å—Ç—Ä–æ–∫–∞-–∏–¥–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ç–æ—Ä –∏—Å—Ç–æ—á–Ω–∏–∫–∞ ('wb' –∏–ª–∏ 'ozon')
   * @param queryConfig - –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è –∑–∞–ø—Ä–æ—Å–∞ –∏–∑ –ë–î (–º–æ–∂–µ—Ç –±—ã—Ç—å null)
   * @returns Promise —Å –º–∞—Å—Å–∏–≤–æ–º —Ç–æ–≤–∞—Ä–æ–≤ —Å –¥–æ–±–∞–≤–ª–µ–Ω–Ω—ã–º source
   * @throws –õ–æ–≥–∏—Ä—É–µ—Ç –æ—à–∏–±–∫—É, –µ—Å–ª–∏ API –Ω–µ–¥–æ—Å—Ç—É–ø–Ω–æ –∏–ª–∏ –≤–æ–∑–≤—Ä–∞—â–∞–µ—Ç –æ—à–∏–±–∫—É
   */
  private async getProductsFromApi(
    request: ProductRequestDto,
    client: { filterProducts: Function },
    source: string,
    queryConfig: any = null
  ): Promise<any[]> {
    const allProducts: any[] = [];
    for (const query of request.queries) {
      let lastError = null;
      let success = false;
      for (let attempt = 1; attempt <= 3; attempt++) {
        try {
          // –ò—Å–ø–æ–ª—å–∑—É–µ–º –ø–µ—Ä–µ–¥–∞–Ω–Ω—É—é –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é –∏–ª–∏ –ø–æ–ª—É—á–∞–µ–º –∏–∑ –ë–î
          let category = request.category;
          let extra: any = {};
          
          if (queryConfig) {
            // –ò—Å–ø–æ–ª—å–∑—É–µ–º –ø–µ—Ä–µ–¥–∞–Ω–Ω—É—é –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é
            if (source === 'wb') {
              const wbCategoryId = await this.dbConfigService.getWbCategoryId(request.category);
              category = wbCategoryId || request.category;
              extra.categoryKey = request.category;
              extra.exactmodels = queryConfig.exactmodels;
            }
            if (source === 'ozon') {
              const ozonCategoryId = await this.dbConfigService.getOzonCategoryId(request.category);
              category = ozonCategoryId || request.category;
              extra.categoryKey = request.category;
              extra.platform_id = queryConfig.platform_id;
              extra.exactmodels = queryConfig.exactmodels;
            }
          } else {
            // Fallback: –ø–æ–ª—É—á–∞–µ–º –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—é –∏–∑ –ë–î (–¥–ª—è —Å–ª—É—á–∞–µ–≤ –±–µ–∑ —Å–ø–µ—Ü–∏—Ñ–∏—á–Ω–æ–π –∫–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏–∏)
            if (source === 'wb') {
              const wbCategoryId = await this.dbConfigService.getWbCategoryId(request.category);
              category = wbCategoryId || request.category;
              extra.categoryKey = request.category;
              
              const queryExactmodels = await this.dbConfigService.getExactModelsForQuery(request.category, query, 'wb');
              if (queryExactmodels) {
                extra.exactmodels = queryExactmodels;
              }
            }
            if (source === 'ozon') {
              const ozonCategoryId = await this.dbConfigService.getOzonCategoryId(request.category);
              category = ozonCategoryId || request.category;
              extra.categoryKey = request.category;
              
              if (request.platform_id) {
                extra.platform_id = request.platform_id;
              }
              if (request.exactmodels) {
                extra.exactmodels = request.exactmodels;
              }
            }
          }
          
          fileLogger.log(`üîç ${source.toUpperCase()} - exactmodels: "${extra.exactmodels || '–Ω–µ —É–∫–∞–∑–∞–Ω—ã'}", platform_id: "${extra.platform_id || '–Ω–µ —É–∫–∞–∑–∞–Ω'}"`);
          
          const response = await client.filterProducts({
            query,
            all_queries: [query],
            category,
            exactmodels: extra.exactmodels,
            platform_id: extra.platform_id,
            exclude_keywords: request.exclude_keywords || []
          });
          if (response.products && Array.isArray(response.products) && response.products.length > 0) {
            const productsWithSource = response.products.map((product: any) => ({
              ...product,
              source
            }));
            allProducts.push(...productsWithSource);
            success = true;
            break; // —É—Å–ø–µ—Ö ‚Äî –≤—ã—Ö–æ–¥–∏–º –∏–∑ retry-—Ü–∏–∫–ª–∞
          } else {
            throw new Error('API –≤–µ—Ä–Ω—É–ª –ø—É—Å—Ç–æ–π –æ—Ç–≤–µ—Ç');
          }
        } catch (error) {
          lastError = error;
          fileLogger.error(`–û—à–∏–±–∫–∞ ${source.toUpperCase()} API (–ø–æ–ø—ã—Ç–∫–∞ ${attempt}) –¥–ª—è –∑–∞–ø—Ä–æ—Å–∞ "${query}": ${error}`);
          if (attempt < 3) {
            await new Promise(res => setTimeout(res, 2000)); // –∑–∞–¥–µ—Ä–∂–∫–∞ –º–µ–∂–¥—É –ø–æ–ø—ã—Ç–∫–∞–º–∏
          }
        }
      }
      if (!success && lastError) {
        fileLogger.error(`‚ùå –í—Å–µ –ø–æ–ø—ã—Ç–∫–∏ –∏—Å—á–µ—Ä–ø–∞–Ω—ã –¥–ª—è ${source.toUpperCase()} API –ø–æ –∑–∞–ø—Ä–æ—Å—É "${query}": ${lastError}`);
      }
    }
    return allProducts;
  }
} 