import { Injectable, Logger, OnModuleInit } from '@nestjs/common';
import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import * as path from 'path';
import { WbParserService } from '../parser/wb-parser.service';
import {
  GetRawProductsCall,
  GetRawProductsCallback,
  GetRawProductsRequest,
  GetRawProductsResponse,
  GrpcError,
} from '../types/grpc.types';

const PROTO_PATH = path.join(__dirname, '../../proto/raw-product.proto');

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const rawProductProto = grpc.loadPackageDefinition(packageDefinition)
  .raw_product as any;

@Injectable()
export class GrpcServerService implements OnModuleInit {
  private readonly logger = new Logger(GrpcServerService.name);
  private server: grpc.Server;

  constructor(private readonly wbParserService: WbParserService) {
    this.server = new grpc.Server();
  }

  async onModuleInit(): Promise<void> {
    this.startGrpcServer();
  }

  private startGrpcServer(): void {
    this.server.addService(rawProductProto.RawProductService.service, {
      GetRawProducts: this.getRawProducts.bind(this),
    });

    const grpcPort = process.env.GRPC_PORT || 3000;
    this.server.bindAsync(
      `0.0.0.0:${grpcPort}`,
      grpc.ServerCredentials.createInsecure(),
      (err: Error | null, port: number) => {
        if (err) {
          this.logger.error(`‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—É—Å–∫–∞ gRPC —Å–µ—Ä–≤–µ—Ä–∞: ${err.message}`);
          return;
        }
        this.server.start();
        this.logger.log(`üöÄ WB API gRPC —Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω –Ω–∞ –ø–æ—Ä—Ç—É ${port}`);
      },
    );
  }

  private async getRawProducts(
    call: GetRawProductsCall,
    callback: GetRawProductsCallback,
  ): Promise<void> {
    try {
      const request: GetRawProductsRequest = call.request;
      const { query, category, categoryKey, auth_token } = request;

      // –ü—Ä–æ–≤–µ—Ä–∫–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏
      const expectedToken = process.env.WB_API_TOKEN;
      if (!expectedToken) {
        const error: GrpcError = {
          code: grpc.status.INTERNAL,
          message: 'Server configuration error: WB_API_TOKEN not set',
          details: '–°–µ—Ä–≤–µ—Ä –Ω–µ –Ω–∞—Å—Ç—Ä–æ–µ–Ω',
        };
        callback(error);
        return;
      }

      if (!auth_token || auth_token !== expectedToken) {
        const error: GrpcError = {
          code: grpc.status.UNAUTHENTICATED,
          message: 'Invalid or missing authentication token',
          details: '–ù–µ–≤–µ—Ä–Ω—ã–π –∏–ª–∏ –æ—Ç—Å—É—Ç—Å—Ç–≤—É—é—â–∏–π —Ç–æ–∫–µ–Ω –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏',
        };
        callback(error);
        return;
      }

      // –í–∞–ª–∏–¥–∞—Ü–∏—è –≤—Ö–æ–¥–Ω—ã—Ö –¥–∞–Ω–Ω—ã—Ö
      if (!query || !category) {
        const error: GrpcError = {
          code: grpc.status.INVALID_ARGUMENT,
          message: 'Query –∏ category –æ–±—è–∑–∞—Ç–µ–ª—å–Ω—ã',
          details: '–û—Ç—Å—É—Ç—Å—Ç–≤—É—é—Ç –æ–±—è–∑–∞—Ç–µ–ª—å–Ω—ã–µ –ø–∞—Ä–∞–º–µ—Ç—Ä—ã –∑–∞–ø—Ä–æ—Å–∞',
        };
        callback(error);
        return;
      }

      this.logger.log(`üîç WB API: ${query} (${category})`);

      const products = await this.wbParserService.parseProducts(
        query,
        category,
      );

      // –ò—Å–ø–æ–ª—å–∑—É–µ–º categoryKey –¥–ª—è –≤–æ–∑–≤—Ä–∞—Ç–∞ –≤ –æ—Ç–≤–µ—Ç–µ (–∫–∞–∫ –≤ —Ç–µ—Å—Ç–µ)
      const responseCategory = categoryKey || category;

      const responseProducts = products.map((product) => ({
        ...product,
        category: responseCategory,
      }));

      const response: GetRawProductsResponse = {
        products: responseProducts,
        total_count: responseProducts.length,
        source: 'wb',
      };

      callback(null, response);
    } catch (error) {
      this.logger.error(
        `‚ùå –û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞: ${error instanceof Error ? error.message : '–ù–µ–∏–∑–≤–µ—Å—Ç–Ω–∞—è –æ—à–∏–±–∫–∞'}`,
      );

      const grpcError: GrpcError = {
        code: grpc.status.INTERNAL,
        message: `–û—à–∏–±–∫–∞ –ø–∞—Ä—Å–∏–Ω–≥–∞: ${error instanceof Error ? error.message : '–ù–µ–∏–∑–≤–µ—Å—Ç–Ω–∞—è –æ—à–∏–±–∫–∞'}`,
      };

      callback(grpcError);
    }
  }
}
