const grpc = require('@grpc/grpc-js');
const protoLoader = require('@grpc/proto-loader');
const fs = require('fs').promises;
const path = require('path');

// –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è
const WB_API_GRPC_URL = 'localhost:3000';
const OZON_API_GRPC_URL = 'localhost:3002';
const OUTPUT_DIR = path.join(__dirname, 'analysis-output');
const PROTO_PATH = path.join(__dirname, '../raw-product.proto');

// –¢–µ—Å—Ç–æ–≤—ã–µ –∑–∞–ø—Ä–æ—Å—ã –¥–ª—è –∫–∞–∂–¥–æ–π –∫–∞—Ç–µ–≥–æ—Ä–∏–∏ (–∫–æ—Ä–æ—Ç–∫–∏–µ, –∫–∞–∫ –≤ Product-Filter-Service)
const testQueries = {
  videocards: [
    'rtx 5070',
    'rtx 5070 ti', 
    'rtx 5080',
    'rtx 5090'
  ],
  processors: [
    '7800x3d',
    '9800x3d',
    '9950x3d'
  ],
  motherboards: [
    'Z790',
    'B760',
    'X870E',
    'B850'
  ],
  playstation: [
    'PlayStation 5',
    'PS5',
    'PlayStation 5 Slim'
  ],
  playstation_accessories: [
    '–î–∏—Å–∫–æ–≤–æ–¥ Sony –¥–ª—è Playstation 5 Pro',
  ],
  nintendo_switch: [
    'nintendo switch 2',
    'nintendo switch oled',
  ]
};

// –ó–∞–≥—Ä—É–∑–∫–∞ proto —Ñ–∞–π–ª–∞
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const protoDescriptor = grpc.loadPackageDefinition(packageDefinition);
const rawProductService = protoDescriptor.raw_product;

const CATEGORY_MAP = {
  videocards: { ozon: 'videokarty-15721', wb: '3274' },
  processors: { ozon: 'protsessory-15726', wb: '3698' },
  motherboards: { ozon: 'materinskie-platy-15725', wb: '3690' },
  playstation: { ozon: 'konsoli-playstation-31751/playstation-79966341', wb: '8829' },
  playstation_accessories: { ozon: 'aksessuary-dlya-igrovyh-pristavok-15810', wb: '5923' },
  nintendo_switch: { ozon: 'igrovye-pristavki-15801/nintendo-26667979', wb: '523' }
};

// üéÆ –ü–õ–ê–¢–§–û–†–ú–´ –î–õ–Ø –ö–û–ù–ö–†–ï–¢–ù–´–• –ó–ê–ü–†–û–°–û–í (–∫–∞–∫ –≤ Product-Filter-Service)
const QUERY_PLATFORMS = {
  'nintendo switch 2': '101858153',
  'nintendo switch oled': '101858153',
};

function getPlatformId(query) {
  return QUERY_PLATFORMS[query] || null;
}

async function ensureOutputDir() {
  try {
    await fs.access(OUTPUT_DIR);
  } catch {
    await fs.mkdir(OUTPUT_DIR, { recursive: true });
  }
}

function sanitizeFilename(query) {
  // –£–±–∏—Ä–∞–µ–º —Å–ø–µ—Ü–∏–∞–ª—å–Ω—ã–µ —Å–∏–º–≤–æ–ª—ã –∏ –∑–∞–º–µ–Ω—è–µ–º –ø—Ä–æ–±–µ–ª—ã –Ω–∞ –¥–µ—Ñ–∏—Å—ã
  return query
    .replace(/[^a-zA-Z0-9\s-]/g, '') // –£–±–∏—Ä–∞–µ–º —Å–ø–µ—Ü—Å–∏–º–≤–æ–ª—ã
    .replace(/\s+/g, '-') // –ó–∞–º–µ–Ω—è–µ–º –ø—Ä–æ–±–µ–ª—ã –Ω–∞ –¥–µ—Ñ–∏—Å—ã
    .toLowerCase();
}

async function testWBApi(categoryKey, query) {
  console.log(`üîç WB API gRPC: ${categoryKey} - "${query}"`);
  
  return new Promise((resolve) => {
    const client = new rawProductService.RawProductService(
      WB_API_GRPC_URL,
      grpc.credentials.createInsecure()
    );

    const request = {
      query: query,
      category: CATEGORY_MAP[categoryKey].wb,
      categoryKey
    };

    client.GetRawProducts(request, (error, response) => {
      if (error) {
        console.error(`‚ùå WB API gRPC error for "${query}":`, error.message);
        resolve({
          success: false,
          error: error.message,
          query,
          category: categoryKey
        });
      } else {
        // –í –æ—Ç–≤–µ—Ç–µ –ø–æ–¥–º–µ–Ω—è–µ–º category –Ω–∞ categoryKey –¥–ª—è –µ–¥–∏–Ω–æ–æ–±—Ä–∞–∑–∏—è
        if (response && response.products) {
          response.products.forEach(p => p.category = categoryKey);
        }
        resolve({
          success: true,
          data: response,
          query,
          category: categoryKey
        });
      }
      
      client.close();
    });
  });
}

async function testOzonApi(categoryKey, query) {
  console.log(`üîç Ozon API gRPC: ${categoryKey} - "${query}"`);
  
  // –û–ø—Ä–µ–¥–µ–ª—è–µ–º –ø–ª–∞—Ç—Ñ–æ—Ä–º—É –¥–ª—è –∑–∞–ø—Ä–æ—Å–∞
  const platformId = getPlatformId(query);
  if (platformId) {
    console.log(`üéÆ –ù–∞–π–¥–µ–Ω–∞ –ø–ª–∞—Ç—Ñ–æ—Ä–º–∞ –¥–ª—è "${query}": ${platformId}`);
  }
  
  return new Promise((resolve) => {
    const client = new rawProductService.RawProductService(
      OZON_API_GRPC_URL,
      grpc.credentials.createInsecure()
    );

    const request = {
      query: query,
      category: CATEGORY_MAP[categoryKey].ozon,
      categoryKey,
      platform_id: platformId || undefined
    };

    client.GetRawProducts(request, (error, response) => {
      if (error) {
        console.error(`‚ùå Ozon API gRPC error for "${query}":`, error.message);
        resolve({
          success: false,
          error: error.message,
          query,
          category: categoryKey,
          platform_id: platformId
        });
      } else {
        // –í –æ—Ç–≤–µ—Ç–µ –ø–æ–¥–º–µ–Ω—è–µ–º category –Ω–∞ categoryKey –¥–ª—è –µ–¥–∏–Ω–æ–æ–±—Ä–∞–∑–∏—è
        if (response && response.products) {
          response.products.forEach(p => p.category = categoryKey);
        }
        resolve({
          success: true,
          data: response,
          query,
          category: categoryKey,
          platform_id: platformId
        });
      }
      
      client.close();
    });
  });
}

async function saveApiResult(parser, query, result) {
  const sanitizedQuery = sanitizeFilename(query);
  const filename = `${parser}-${sanitizedQuery}.json`;
  const filepath = path.join(OUTPUT_DIR, filename);
  
  await fs.writeFile(filepath, JSON.stringify(result, null, 2));
  console.log(`üíæ ${parser.toUpperCase()} –¥–∞–Ω–Ω—ã–µ —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã: ${filename}`);
  
  return filepath;
}

async function analyzeResults(results) {
  console.log('\nüìä –ê–ù–ê–õ–ò–ó –†–ï–ó–£–õ–¨–¢–ê–¢–û–í:');
  console.log('='.repeat(50));
  
  for (const [category, categoryResults] of Object.entries(results)) {
    console.log(`\nüéØ ${category.toUpperCase()}:`);
    
    for (const [query, queryResults] of Object.entries(categoryResults)) {
      console.log(`\n  –ó–∞–ø—Ä–æ—Å: "${query}"`);
      
      // WB API –∞–Ω–∞–ª–∏–∑
      const wbResult = queryResults.wb;
      if (wbResult.success) {
        const products = wbResult.data?.products || [];
        console.log(`    WB API gRPC: ‚úÖ ${products.length} —Ç–æ–≤–∞—Ä–æ–≤`);
        
        if (products.length > 0) {
          const sample = products[0];
          console.log(`      –ü—Ä–∏–º–µ—Ä: ${sample.name} - ${sample.price}‚ÇΩ`);
          console.log(`      –ü–æ–ª—è: ${Object.keys(sample).join(', ')}`);
          console.log(`      –ó–∞–ø—Ä–æ—Å: "${sample.query}" (source: ${sample.source})`);
        }
      } else {
        console.log(`    WB API gRPC: ‚ùå ${wbResult.error}`);
      }
      
      // Ozon API –∞–Ω–∞–ª–∏–∑
      const ozonResult = queryResults.ozon;
      if (ozonResult.success) {
        const products = ozonResult.data?.products || [];
        const platformId = ozonResult.platform_id;
        console.log(`    Ozon API gRPC: ‚úÖ ${products.length} —Ç–æ–≤–∞—Ä–æ–≤`);
        if (platformId) {
          console.log(`      üéÆ –ü–ª–∞—Ç—Ñ–æ—Ä–º–∞: ${platformId}`);
        }
        
        if (products.length > 0) {
          const sample = products[0];
          console.log(`      –ü—Ä–∏–º–µ—Ä: ${sample.name} - ${sample.price}‚ÇΩ`);
          console.log(`      –ü–æ–ª—è: ${Object.keys(sample).join(', ')}`);
          console.log(`      –ó–∞–ø—Ä–æ—Å: "${sample.query}" (source: ${sample.source})`);
        }
      } else {
        console.log(`    Ozon API gRPC: ‚ùå ${ozonResult.error}`);
      }
    }
  }
}

async function main() {
  console.log('üöÄ –ê–ù–ê–õ–ò–ó –°–´–†–´–• –î–ê–ù–ù–´–• WB API –ò OZON API (gRPC)');
  console.log('='.repeat(70));
  console.log(`WB API gRPC: ${WB_API_GRPC_URL}`);
  console.log(`Ozon API gRPC: ${OZON_API_GRPC_URL}`);
  console.log(`Proto —Ñ–∞–π–ª: ${PROTO_PATH}`);
  console.log(`–í—ã—Ö–æ–¥–Ω–∞—è –ø–∞–ø–∫–∞: ${OUTPUT_DIR}`);
  console.log('');

  await ensureOutputDir();
  
  const allResults = {};
  
  for (const [categoryKey, queries] of Object.entries(testQueries)) {
    console.log(`\nüì¶ –ö–ê–¢–ï–ì–û–†–ò–Ø: ${categoryKey.toUpperCase()}`);
    console.log('-'.repeat(40));
    
    allResults[categoryKey] = {};
    
    for (const query of queries) {
      console.log(`\nüîé –¢–µ—Å—Ç–∏—Ä—É–µ–º –∑–∞–ø—Ä–æ—Å: "${query}"`);
      
      // –ü–æ—Å–ª–µ–¥–æ–≤–∞—Ç–µ–ª—å–Ω—ã–µ –∑–∞–ø—Ä–æ—Å—ã –∫ gRPC —Å–µ—Ä–≤–∏—Å–∞–º
      const wbResult = await testWBApi(categoryKey, query);
      const ozonResult = await testOzonApi(categoryKey, query);
      
      allResults[categoryKey][query] = {
        wb: wbResult,
        ozon: ozonResult,
        timestamp: new Date().toISOString()
      };
      
      // –°–æ—Ö—Ä–∞–Ω—è–µ–º –æ—Ç–¥–µ–ª—å–Ω—ã–µ —Ñ–∞–π–ª—ã –¥–ª—è –∫–∞–∂–¥–æ–≥–æ API –∏ –∑–∞–ø—Ä–æ—Å–∞
      await saveApiResult('wb', query, wbResult);
      await saveApiResult('ozon', query, ozonResult);
      
      // –ù–µ–±–æ–ª—å—à–∞—è –ø–∞—É–∑–∞ –º–µ–∂–¥—É –∑–∞–ø—Ä–æ—Å–∞–º–∏
      await new Promise(resolve => setTimeout(resolve, 1000));
    }
  }
  
  // –°–æ—Ö—Ä–∞–Ω—è–µ–º –æ–±—â–∏–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
  const timestamp = new Date().toISOString().replace(/[:.]/g, '-');
  const summaryFile = path.join(OUTPUT_DIR, `all-results-${timestamp}.json`);
  await fs.writeFile(summaryFile, JSON.stringify(allResults, null, 2));
  console.log(`\nüíæ –û–±—â–∏–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã: ${summaryFile}`);
  
  // –ê–Ω–∞–ª–∏–∑–∏—Ä—É–µ–º —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã
  await analyzeResults(allResults);
  
  console.log('\n‚úÖ –ê–Ω–∞–ª–∏–∑ –∑–∞–≤–µ—Ä—à–µ–Ω!');
  console.log(`üìÅ –í—Å–µ —Ñ–∞–π–ª—ã —Å–æ—Ö—Ä–∞–Ω–µ–Ω—ã –≤: ${OUTPUT_DIR}`);
  console.log('\nüìã –ü—Ä–∏–º–µ—Ä—ã —Å–æ–∑–¥–∞–Ω–Ω—ã—Ö —Ñ–∞–π–ª–æ–≤:');
  console.log(`   ‚Ä¢ wb-rtx5070.json - WB API –¥–∞–Ω–Ω—ã–µ –¥–ª—è RTX 5070`);
  console.log(`   ‚Ä¢ ozon-rtx5070.json - Ozon API –¥–∞–Ω–Ω—ã–µ –¥–ª—è RTX 5070`);
  console.log(`   ‚Ä¢ wb-7800x3d.json - WB API –¥–∞–Ω–Ω—ã–µ –¥–ª—è –ø—Ä–æ—Ü–µ—Å—Å–æ—Ä–∞`);
  console.log(`   ‚Ä¢ ozon-7800x3d.json - Ozon API –¥–∞–Ω–Ω—ã–µ –¥–ª—è –ø—Ä–æ—Ü–µ—Å—Å–æ—Ä–∞`);
  console.log(`   ‚Ä¢ wb-nintendo-switch-2.json - WB API –¥–∞–Ω–Ω—ã–µ –¥–ª—è Nintendo Switch 2`);
  console.log(`   ‚Ä¢ ozon-nintendo-switch-2.json - Ozon API –¥–∞–Ω–Ω—ã–µ –¥–ª—è Nintendo Switch 2 (—Å –ø–ª–∞—Ç—Ñ–æ—Ä–º–æ–π)`);
  console.log(`   ‚Ä¢ all-results-${timestamp}.json - –æ–±—â–∏–µ —Ä–µ–∑—É–ª—å—Ç–∞—Ç—ã`);
}

// –û–±—Ä–∞–±–æ—Ç–∫–∞ –æ—à–∏–±–æ–∫
process.on('unhandledRejection', (reason, promise) => {
  console.error('‚ùå –ù–µ–æ–±—Ä–∞–±–æ—Ç–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞:', reason);
  process.exit(1);
});

// –ó–∞–ø—É—Å–∫
if (require.main === module) {
  main().catch(error => {
    console.error('‚ùå –ö—Ä–∏—Ç–∏—á–µ—Å–∫–∞—è –æ—à–∏–±–∫–∞:', error);
    process.exit(1);
  });
}

module.exports = {
  testWBApi,
  testOzonApi,
  testQueries
};