#!/usr/bin/env python3
"""
–ë–µ–∑–æ–ø–∞—Å–Ω—ã–π —Ç–µ—Å—Ç DDoS –∑–∞—â–∏—Ç—ã –≤ Ozon API (–±–µ–∑ –æ–±—Ä–∞—â–µ–Ω–∏—è –∫ Ozon)
"""
import asyncio
import grpc
import sys
import os
import time
import requests

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ src –¥–ª—è –∏–º–ø–æ—Ä—Ç–∞
sys.path.append(os.path.join(os.path.dirname(__file__), 'src'))

import raw_product_pb2
import raw_product_pb2_grpc


async def test_ddos_protection_safe():
    """–ë–µ–∑–æ–ø–∞—Å–Ω–æ–µ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ DDoS –∑–∞—â–∏—Ç—ã –±–µ–∑ –æ–±—Ä–∞—â–µ–Ω–∏—è –∫ Ozon"""
    
    # –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É
    channel = grpc.aio.insecure_channel('localhost:3002')
    stub = raw_product_pb2_grpc.RawProductServiceStub(channel)
    
    # –¢–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ
    test_token = "marketvision_secret_token_2024"
    
    print("üß™ –ë–µ–∑–æ–ø–∞—Å–Ω–æ–µ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ DDoS –∑–∞—â–∏—Ç—ã (–±–µ–∑ –æ–±—Ä–∞—â–µ–Ω–∏—è –∫ Ozon)...")
    
    # –¢–µ—Å—Ç 1: –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ DDoS –∑–∞—â–∏—Ç—ã (–±–µ–∑ –∑–∞–ø—Ä–æ—Å–æ–≤)
    print("\n1. –ü—Ä–æ–≤–µ—Ä–∫–∞ –Ω–∞—á–∞–ª—å–Ω–æ–π —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ DDoS –∑–∞—â–∏—Ç—ã:")
    try:
        headers = {
            'Authorization': f'Bearer {test_token}',
            'Accept': 'application/json'
        }
        response = requests.get('http://localhost:3005/ddos-stats', headers=headers)
        if response.status_code == 200:
            stats = response.json()
            print(f"‚úÖ –ù–∞—á–∞–ª—å–Ω–∞—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞:")
            print(f"   –í—Å–µ–≥–æ –∑–∞–ø—Ä–æ—Å–æ–≤: {stats.get('total_requests', 0)}")
            print(f"   –ó–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–æ: {stats.get('blocked_requests', 0)}")
            print(f"   IP –≤ —á–µ—Ä–Ω–æ–º —Å–ø–∏—Å–∫–µ: {stats.get('blacklisted_ips', 0)}")
        else:
            print(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏: {response.status_code}")
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏: {e}")
    
    # –¢–µ—Å—Ç 2: Burst –∞—Ç–∞–∫–∞ —Å –Ω–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–º —Ç–æ–∫–µ–Ω–æ–º (–Ω–µ –¥–æ–π–¥–µ—Ç –¥–æ Ozon)
    print("\n2. –¢–µ—Å—Ç burst –∞—Ç–∞–∫–∏ —Å –Ω–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–º —Ç–æ–∫–µ–Ω–æ–º:")
    blocked_count = 0
    for i in range(15):  # –ë–æ–ª—å—à–µ —á–µ–º –ª–∏–º–∏—Ç burst protection
        try:
            request = raw_product_pb2.GetRawProductsRequest(
                query=f"TEST_QUERY_{i}",
                category="test_category",
                auth_token="wrong_token"  # –ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ç–æ–∫–µ–Ω - –Ω–µ –¥–æ–π–¥–µ—Ç –¥–æ Ozon
            )
            response = await stub.GetRawProducts(request)
            print(f"   –ó–∞–ø—Ä–æ—Å {i+1}: –ø—Ä–æ—à–µ–ª (–Ω–µ–æ–∂–∏–¥–∞–Ω–Ω–æ)")
        except grpc.RpcError as e:
            if "DDoS protection" in e.details():
                blocked_count += 1
                print(f"   –ó–∞–ø—Ä–æ—Å {i+1}: –∑–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω DDoS - {e.details()}")
            elif e.code() == grpc.StatusCode.UNAUTHENTICATED:
                print(f"   –ó–∞–ø—Ä–æ—Å {i+1}: –Ω–µ—É—Å–ø–µ—à–Ω–∞—è –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏—è")
            else:
                print(f"   –ó–∞–ø—Ä–æ—Å {i+1}: –¥—Ä—É–≥–∞—è –æ—à–∏–±–∫–∞ - {e.details()}")
    
    print(f"‚úÖ Burst –∞—Ç–∞–∫–∞: –∑–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–æ {blocked_count}/15 –∑–∞–ø—Ä–æ—Å–æ–≤")
    
    # –¢–µ—Å—Ç 3: –ü–æ–¥–æ–∑—Ä–∏—Ç–µ–ª—å–Ω—ã–µ –ø–∞—Ç—Ç–µ—Ä–Ω—ã —Å –Ω–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–º —Ç–æ–∫–µ–Ω–æ–º
    print("\n3. –¢–µ—Å—Ç –ø–æ–¥–æ–∑—Ä–∏—Ç–µ–ª—å–Ω—ã—Ö –ø–∞—Ç—Ç–µ—Ä–Ω–æ–≤:")
    try:
        for i in range(60):  # –ú–Ω–æ–≥–æ –æ–¥–∏–Ω–∞–∫–æ–≤—ã—Ö –∑–∞–ø—Ä–æ—Å–æ–≤
            request = raw_product_pb2.GetRawProductsRequest(
                query="SUSPICIOUS_PATTERN_TEST",  # –û–¥–∏–Ω–∞–∫–æ–≤—ã–π –∑–∞–ø—Ä–æ—Å
                category="test_category",
                auth_token="wrong_token"  # –ù–µ–ø—Ä–∞–≤–∏–ª—å–Ω—ã–π —Ç–æ–∫–µ–Ω
            )
            response = await stub.GetRawProducts(request)
            if i % 10 == 0:
                print(f"   –ó–∞–ø—Ä–æ—Å {i+1}: –ø—Ä–æ—à–µ–ª")
    except grpc.RpcError as e:
        if "DDoS protection" in e.details():
            print(f"‚úÖ –ü–æ–¥–æ–∑—Ä–∏—Ç–µ–ª—å–Ω—ã–µ –ø–∞—Ç—Ç–µ—Ä–Ω—ã –∑–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω—ã: {e.details()}")
        elif e.code() == grpc.StatusCode.UNAUTHENTICATED:
            print(f"‚úÖ –ó–∞–ø—Ä–æ—Å—ã –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω—ã –Ω–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏")
        else:
            print(f"‚ùå –ù–µ–æ–∂–∏–¥–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞: {e.details()}")
    
    # –¢–µ—Å—Ç 4: –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ –ø–æ—Å–ª–µ –∞—Ç–∞–∫
    print("\n4. –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏ –ø–æ—Å–ª–µ –∞—Ç–∞–∫:")
    try:
        headers = {
            'Authorization': f'Bearer {test_token}',
            'Accept': 'application/json'
        }
        response = requests.get('http://localhost:3005/ddos-stats', headers=headers)
        if response.status_code == 200:
            stats = response.json()
            print(f"‚úÖ –°—Ç–∞—Ç–∏—Å—Ç–∏–∫–∞ –ø–æ—Å–ª–µ –∞—Ç–∞–∫:")
            print(f"   –í—Å–µ–≥–æ –∑–∞–ø—Ä–æ—Å–æ–≤: {stats.get('total_requests', 0)}")
            print(f"   –ó–∞–±–ª–æ–∫–∏—Ä–æ–≤–∞–Ω–æ: {stats.get('blocked_requests', 0)}")
            print(f"   –ü—Ä–æ—Ü–µ–Ω—Ç –±–ª–æ–∫–∏—Ä–æ–≤–∫–∏: {stats.get('block_rate', 0):.2f}%")
            print(f"   IP –≤ —á–µ—Ä–Ω–æ–º —Å–ø–∏—Å–∫–µ: {stats.get('blacklisted_ips', 0)}")
            print(f"   –ü–æ–¥–æ–∑—Ä–∏—Ç–µ–ª—å–Ω—ã–µ IP: {stats.get('suspicious_ips', 0)}")
        else:
            print(f"‚ùå –û—à–∏–±–∫–∞ –ø–æ–ª—É—á–µ–Ω–∏—è —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏: {response.status_code}")
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ –∑–∞–ø—Ä–æ—Å–∞ —Å—Ç–∞—Ç–∏—Å—Ç–∏–∫–∏: {e}")
    
    # –¢–µ—Å—Ç 5: –ü—Ä–æ–≤–µ—Ä–∫–∞ –±–µ–ª–æ–≥–æ —Å–ø–∏—Å–∫–∞ (localhost –¥–æ–ª–∂–µ–Ω –ø—Ä–æ—Ö–æ–¥–∏—Ç—å)
    print("\n5. –¢–µ—Å—Ç –±–µ–ª–æ–≥–æ —Å–ø–∏—Å–∫–∞ (localhost):")
    try:
        # –≠—Ç–æ—Ç —Ç–µ—Å—Ç –º–æ–∂–µ—Ç –Ω–µ —Å—Ä–∞–±–æ—Ç–∞—Ç—å, —Ç–∞–∫ –∫–∞–∫ –º—ã –ø–æ–¥–∫–ª—é—á–∞–µ–º—Å—è —á–µ—Ä–µ–∑ localhost
        # –Ω–æ –æ–Ω –ø–æ–∫–∞–∂–µ—Ç, —á—Ç–æ —Å–∏—Å—Ç–µ–º–∞ —Ä–∞–±–æ—Ç–∞–µ—Ç
        request = raw_product_pb2.GetRawProductsRequest(
            query="WHITELIST_TEST",
            category="test_category",
            auth_token="wrong_token"
        )
        response = await stub.GetRawProducts(request)
        print(f"‚úÖ –ó–∞–ø—Ä–æ—Å –ø—Ä–æ—à–µ–ª (–≤–æ–∑–º–æ–∂–Ω–æ, localhost –≤ –±–µ–ª–æ–º —Å–ø–∏—Å–∫–µ)")
    except grpc.RpcError as e:
        if e.code() == grpc.StatusCode.UNAUTHENTICATED:
            print(f"‚úÖ –ó–∞–ø—Ä–æ—Å –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω –Ω–∞ –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏ (–Ω–æ –Ω–µ –Ω–∞ DDoS –∑–∞—â–∏—Ç–µ)")
        else:
            print(f"‚ùå –ù–µ–æ–∂–∏–¥–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞: {e.details()}")
    
    # –¢–µ—Å—Ç 6: –ü—Ä–æ–≤–µ—Ä–∫–∞ health endpoint (–¥–æ–ª–∂–µ–Ω —Ä–∞–±–æ—Ç–∞—Ç—å)
    print("\n6. –¢–µ—Å—Ç health endpoint:")
    try:
        headers = {
            'User-Agent': 'curl/7.68.0',
            'Accept': 'application/json'
        }
        response = requests.get('http://localhost:3005/health', headers=headers)
        if response.status_code == 200:
            health_data = response.json()
            print(f"‚úÖ Health endpoint —Ä–∞–±–æ—Ç–∞–µ—Ç: {health_data.get('status', 'unknown')}")
        else:
            print(f"‚ùå Health endpoint –Ω–µ —Ä–∞–±–æ—Ç–∞–µ—Ç: {response.status_code}")
    except Exception as e:
        print(f"‚ùå –û—à–∏–±–∫–∞ health endpoint: {e}")
    
    await channel.close()
    print("\n‚úÖ –ë–µ–∑–æ–ø–∞—Å–Ω–æ–µ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ DDoS –∑–∞—â–∏—Ç—ã –∑–∞–≤–µ—Ä—à–µ–Ω–æ!")
    print("üí° –í—Å–µ —Ç–µ—Å—Ç—ã –≤—ã–ø–æ–ª–Ω–µ–Ω—ã –±–µ–∑ –æ–±—Ä–∞—â–µ–Ω–∏—è –∫ Ozon API")


if __name__ == "__main__":
    asyncio.run(test_ddos_protection_safe()) 