#!/usr/bin/env python3
"""
–†–∞—Å—à–∏—Ä–µ–Ω–Ω—ã–π —Ç–µ—Å—Ç –≤–∞–ª–∏–¥–∞—Ü–∏–∏ —Ä–∞–∑–º–µ—Ä–∞ –∑–∞–ø—Ä–æ—Å–æ–≤ –≤ Ozon API
"""
import asyncio
import grpc
import sys
import os

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –∫ src –¥–ª—è –∏–º–ø–æ—Ä—Ç–∞
sys.path.append(os.path.join(os.path.dirname(__file__), 'src'))

import raw_product_pb2
import raw_product_pb2_grpc


async def test_extended_validation():
    """–†–∞—Å—à–∏—Ä–µ–Ω–Ω–æ–µ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ —Ä–∞–∑–º–µ—Ä–∞ –∑–∞–ø—Ä–æ—Å–æ–≤"""
    
    # –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É
    channel = grpc.aio.insecure_channel('localhost:3002')
    stub = raw_product_pb2_grpc.RawProductServiceStub(channel)
    
    # –¢–µ—Å—Ç–æ–≤—ã–µ –¥–∞–Ω–Ω—ã–µ
    test_token = "marketvision_secret_token_2024"
    
    print("üß™ –†–∞—Å—à–∏—Ä–µ–Ω–Ω–æ–µ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –≤–∞–ª–∏–¥–∞—Ü–∏–∏ —Ä–∞–∑–º–µ—Ä–∞ –∑–∞–ø—Ä–æ—Å–æ–≤...")
    
    # –¢–µ—Å—Ç 1: –°–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω—ã–π platform_id
    print("\n1. –¢–µ—Å—Ç —Å–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω–æ–≥–æ platform_id:")
    try:
        long_platform_id = "X" * 101  # 101 —Å–∏–º–≤–æ–ª
        request = raw_product_pb2.GetRawProductsRequest(
            query="RTX 5070",
            category="videocards",
            platform_id=long_platform_id,
            auth_token=test_token
        )
        response = await stub.GetRawProducts(request)
        print(f"‚ùå –°–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω—ã–π platform_id –ø—Ä–æ—à–µ–ª (–Ω–µ –¥–æ–ª–∂–µ–Ω –±—ã–ª): {response.total_count} —Ç–æ–≤–∞—Ä–æ–≤")
    except grpc.RpcError as e:
        if e.code() == grpc.StatusCode.INVALID_ARGUMENT:
            print(f"‚úÖ –°–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω—ã–π platform_id –ø—Ä–∞–≤–∏–ª—å–Ω–æ –æ—Ç–∫–ª–æ–Ω–µ–Ω: {e.details()}")
        else:
            print(f"‚ùå –ù–µ–æ–∂–∏–¥–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞: {e.code()} - {e.details()}")
    
    # –¢–µ—Å—Ç 2: –°–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω—ã–π exactmodels
    print("\n2. –¢–µ—Å—Ç —Å–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω–æ–≥–æ exactmodels:")
    try:
        long_exactmodels = "Y" * 101  # 101 —Å–∏–º–≤–æ–ª
        request = raw_product_pb2.GetRawProductsRequest(
            query="RTX 5070",
            category="videocards",
            exactmodels=long_exactmodels,
            auth_token=test_token
        )
        response = await stub.GetRawProducts(request)
        print(f"‚ùå –°–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω—ã–π exactmodels –ø—Ä–æ—à–µ–ª (–Ω–µ –¥–æ–ª–∂–µ–Ω –±—ã–ª): {response.total_count} —Ç–æ–≤–∞—Ä–æ–≤")
    except grpc.RpcError as e:
        if e.code() == grpc.StatusCode.INVALID_ARGUMENT:
            print(f"‚úÖ –°–ª–∏—à–∫–æ–º –¥–ª–∏–Ω–Ω—ã–π exactmodels –ø—Ä–∞–≤–∏–ª—å–Ω–æ –æ—Ç–∫–ª–æ–Ω–µ–Ω: {e.details()}")
        else:
            print(f"‚ùå –ù–µ–æ–∂–∏–¥–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞: {e.code()} - {e.details()}")
    
    # –¢–µ—Å—Ç 3: –í—Å–µ –ø–æ–ª—è –Ω–∞ –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π –¥–ª–∏–Ω–µ
    print("\n3. –¢–µ—Å—Ç –≤—Å–µ—Ö –ø–æ–ª–µ–π –Ω–∞ –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π –¥–ª–∏–Ω–µ:")
    try:
        max_query = "Q" * 100
        max_category = "C" * 100
        max_platform_id = "P" * 100
        max_exactmodels = "E" * 100
        
        request = raw_product_pb2.GetRawProductsRequest(
            query=max_query,
            category=max_category,
            platform_id=max_platform_id,
            exactmodels=max_exactmodels,
            auth_token=test_token
        )
        response = await stub.GetRawProducts(request)
        print(f"‚úÖ –í—Å–µ –ø–æ–ª—è –Ω–∞ –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π –¥–ª–∏–Ω–µ –ø—Ä–æ—à–ª–∏: {response.total_count} —Ç–æ–≤–∞—Ä–æ–≤")
    except grpc.RpcError as e:
        print(f"‚ùå –í—Å–µ –ø–æ–ª—è –Ω–∞ –º–∞–∫—Å–∏–º–∞–ª—å–Ω–æ–π –¥–ª–∏–Ω–µ –Ω–µ –ø—Ä–æ—à–ª–∏: {e.details()}")
    
    # –¢–µ—Å—Ç 4: –ü—É—Å—Ç—ã–µ –ø–æ–ª—è (–¥–æ–ª–∂–Ω—ã –±—ã—Ç—å –æ—Ç–∫–ª–æ–Ω–µ–Ω—ã)
    print("\n4. –¢–µ—Å—Ç –ø—É—Å—Ç—ã—Ö –ø–æ–ª–µ–π:")
    try:
        request = raw_product_pb2.GetRawProductsRequest(
            query="",
            category="videocards",
            auth_token=test_token
        )
        response = await stub.GetRawProducts(request)
        print(f"‚ùå –ü—É—Å—Ç–æ–π query –ø—Ä–æ—à–µ–ª (–Ω–µ –¥–æ–ª–∂–µ–Ω –±—ã–ª): {response.total_count} —Ç–æ–≤–∞—Ä–æ–≤")
    except grpc.RpcError as e:
        if e.code() == grpc.StatusCode.INVALID_ARGUMENT:
            print(f"‚úÖ –ü—É—Å—Ç–æ–π query –ø—Ä–∞–≤–∏–ª—å–Ω–æ –æ—Ç–∫–ª–æ–Ω–µ–Ω: {e.details()}")
        else:
            print(f"‚ùå –ù–µ–æ–∂–∏–¥–∞–Ω–Ω–∞—è –æ—à–∏–±–∫–∞: {e.code()} - {e.details()}")
    
    await channel.close()
    print("\n‚úÖ –†–∞—Å—à–∏—Ä–µ–Ω–Ω–æ–µ —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏–µ –∑–∞–≤–µ—Ä—à–µ–Ω–æ!")


if __name__ == "__main__":
    asyncio.run(test_extended_validation()) 